# VirtualDesktopAccessor

./: Cargo.toml  README-crate.md  README.md
.github/workflows/: release.yml
dll/: Cargo.toml  build.rs
dll/src/: lib.rs
print-com-interfaces/src/: main.rs
src/: comobjects.rs  events.rs  interfaces.rs  interfaces_multi.rs  listener.rs  tests.rs
src/interfaces_multi/: build_10240.rs  build_20348.rs  build_22000.rs  build_22621_2215.rs  build_26100.rs  build_dyn.rs
testbin/: Cargo.toml
testbin/src/: main.rs
