[package]
name = "dll"
version.workspace = true
authors.workspace = true
edition = "2021"
publish = false
build = "build.rs"

[package.metadata.winresource]
FileDescription = "VirtualDesktopAccessor"
ProductName = "VirtualDesktopAccessor"

[lib]
name = "VirtualDesktopAccessor"
crate-type = ["cdylib"]

# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"

[dependencies]
winvd = { path = "../", features = ["crossbeam-channel"] }
once_cell = "1.5.0"
crossbeam-channel = { version = "0.5" }
windows = { version = "0.58", features = [
    "implement",
    "Win32_System_Com",
    "Win32_UI_Shell_Common", # for IObjectArray
    "Win32_Foundation",
] }

[build-dependencies]
winresource = { version = "0.1", optional = true }

[features]
multiple-windows-versions = ["winvd/multiple-windows-versions"]
windows-manifest = ["dep:winresource"]
