[package]
name = "testbin"
version = "0.0.1"
authors = ["Jari Otto Oskari Pennanen", "Lej77 <31554212+Lej77@users.noreply.github.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
multiple-windows-versions = ["winvd/multiple-windows-versions"]

[dependencies]
winit = "0.30.5"
winvd = { path = "../", features = ["winit"] }
once_cell = "1.5.0"
